--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -21,6 +21,9 @@ http {
         listen 80;
         server_name location;
 
+        auth_basic "Password";   # 添加认证提示符信息（必须加“”）
+        auth_basic_user_file "/usr/local/nginx/pass";  # 添加认证的密码文件路径
+
         #charset koi8-r;
 
         #access_log  logs/host.access.log  main;
